--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ MANIFEST
 *.MOV
 *.mp4
 
+# Saved files/logs
+*.npy 
+*events.out*
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
